<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lotteryResult"
            android:icon = "@drawable/lottery"
            android:title="@string/Lottery" />
        <item
            android:id="@+id/nav_sendFeedback"
            android:icon = "@drawable/feedback"
            android:title="@string/Feedback" />
        <item
            android:id="@+id/nav_stayInfo"
            android:icon = "@drawable/stay"
            android:title="@string/Your_stay" />
        <item
            android:id="@+id/nav_action"
            android:icon = "@drawable/activity"
            android:title="@string/Action_items" />
        <item
            android:id="@+id/nav_manage"
            android:icon = "@drawable/logout"
            android:title="@string/Log_Out" />
    </group>
</menu>
