<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    tools:context="fragments.HomeFragment"
    android:layout_height="match_parent"
    android:background="@drawable/header"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:weightSum="10"

    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5">

        <TextView
            android:id="@+id/fragment_home_introEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:fontFamily="acme"
            android:paddingTop="20dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        card_view:cardCornerRadius="3dp"
        android:padding="16dp"
        android:elevation="1dp">


    <LinearLayout
        android:id = "@+id/fragment_home_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grating"
            android:textColor="@color/black_blue"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="4sp"
            android:orientation="horizontal"
            >
            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smile_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/any_comments"
                    android:textColor="@color/black_blue"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:background="@android:color/transparent"/>

                <EditText
                    android:id="@+id/fragment_home_commentEt"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/bg_round_corner_bordered"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:gravity="top|start"
                    />

                <Button
                    android:id="@+id/fragment_home_btnsave"
                    android:layout_width="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_accent_round_corner"
                    android:textColor="@android:color/white"
                    android:text="@string/save" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>