<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/header"
    android:weightSum="10"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.7">

        <TextView
            android:id = "@+id/story_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="34sp"
            android:text="@string/about_your_stay"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

    </RelativeLayout>




        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.2"
            card_view:cardCornerRadius="3dp"
            android:padding="16dp"
            android:elevation="1dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="6">

                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src = "@drawable/bed"/>

                    <TextView
                        android:id="@+id/txtBed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text="@string/bed"
                        android:textColor="@color/black_blue"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtBedR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="5"
                        android:text=""
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src = "@drawable/calendar"/>


                    <TextView
                        android:id="@+id/txtDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black_blue"
                        android:text="@string/last_day_of_stay"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtDayR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text=""
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.8"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp">


                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src = "@drawable/warning"/>

                    <TextView
                        android:id="@+id/txtWarn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black_blue"
                        android:text="@string/warnings"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/txtMajor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_marginLeft="20dp"
                            android:text=""
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/txtMinor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_marginLeft="20dp"
                            android:text=""
                            android:textSize="18sp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                    </LinearLayout>




                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginLeft="30dp">


                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src = "@drawable/locker"/>


                    <TextView
                        android:id="@+id/txtLocker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_blue"
                        android:text="@string/locker_combo"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtLockerR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text=""
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src = "@drawable/nit"/>



                    <TextView
                        android:layout_marginLeft="20dp"
                        android:id="@+id/txtNIT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black_blue"
                        android:text="@string/nit"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtNITR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="5"
                        android:text=""
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"

                    >

                    <ProgressBar
                        android:id="@+id/loadingPanel"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>



</LinearLayout>